--- a/src/assets/styles/fonts.scss
+++ b/src/assets/styles/fonts.scss
@@ -1,8 +1,27 @@
 @import url("https://fonts.googleapis.com/css2?family=Roboto:ital@0;1&display=swap");
-// @font-face {
-//   font-family: 'Robot';
-//   src: url('../assets/fonts/Roboto-Regular.woff2') format('woff2');
-//   font-display: swap;
-//   font-weight: 600;
-//   font-style: normal;
-// }
+@mixin mainFont {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 1rem;
+  line-height: 1.5rem;
+  color: $mainFontColor;
+}
+@mixin fontSmallCaps {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  color: $colorFontStatus;
+  font-size: 0.75rem;
+  line-height: 1rem;
+  letter-spacing: 0.06em;
+  font-variant: small-caps;
+}
+@mixin fontSmall {
+  font-family: Roboto;
+  font-style: normal;
+  font-weight: normal;
+  color: $mainFontColor;
+  font-size: 0.75rem;
+  line-height: 1.5rem;
+}
