--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,8 +1,3 @@
-@mixin breakpoint($bp) {
-  @media screen and (max-width: $bp) {
-    @content;
-  }
-}
 @mixin min-max($min-width, $max-width, $padding) {
   min-width: $min-width;
   max-width: $max-width;
@@ -10,15 +5,6 @@
   box-sizing: border-box;
   margin: 0 auto;
 }
-@mixin visually-hidden() {
-  position: absolute;
-  width: 0.0625rem;
-  height: 0.0625rem;
-  margin: -0.0625rem;
-  border: 0;
-  padding: 0;
-  white-space: nowrap;
-  clip-path: inset(100%);
-  clip: rect(0, 0, 0, 0);
-  overflow: hidden;
+@mixin box-shadow($x: 0, $y: 0.25rem, $blur: 0.5rem, $color: $blackOpacity) {
+  box-shadow: $x $y $blur $color;
 }
