--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -1,10 +1,10 @@
 @import "../../../assets/styles/main.scss";
 .card {
-  width: 23.75rem;
+  max-width: 23.75rem;
   display: flex;
-  background: #ffffff;
-  box-shadow: $box-shadow;
+  background: $white;
   border-radius: 0.25rem;
+  @include box-shadow;
   .photoBlock {
     width: 7.75rem;
     height: 7.75rem;
@@ -12,6 +12,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      border-radius: 0.25rem 0 0 0.25rem;
     }
   }
   .description {
@@ -22,13 +23,11 @@
     .status {
       padding: 0.5rem 0.75rem;
       margin-bottom: 0.75rem;
-      font-size: 0.75rem;
-      line-height: 1rem;
       background-color: $colorBgStatus;
-      color: $colorFontStatus;
+      @include fontSmallCaps;
     }
     .date {
-      font-size: 0.75rem;
+      @include fontSmall;
       opacity: 0.4;
     }
   }
