--- a/src/assets/styles/breakpoint.scss
+++ b/src/assets/styles/breakpoint.scss
@@ -3,25 +3,21 @@
     @content;
   }
 }
-
 @mixin tabletLg {
   @media (max-width: 992px) {
     @content;
   }
 }
-
-@mixin tablet {
+@mixin tabletSm {
   @media (max-width: 768px) {
     @content;
   }
 }
-
 @mixin mobile {
   @media (max-width: 482px) {
     @content;
   }
 }
-
 @mixin custom($width) {
   @media (max-width: $width) {
     @content;
