--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -9,9 +9,9 @@ html {
 body {
   @include mainFont;
 }
-// .container {
-//   @include min-max(20rem, 100%, 0);
-// }
-// .wrapper {
-//   @include min-max(20rem, 65.625rem, 1rem);
-// }
+.container {
+  @include min-max(20rem, 100%, 0);
+}
+.wrapper {
+  @include min-max(20rem, 77rem, 1rem);
+}
