--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -4,6 +4,9 @@
   display: flex;
   background: $white;
   border-radius: 0.25rem;
+  @include custom(42rem) {
+    margin: 1rem auto;
+  }
   @include box-shadow;
   .photoBlock {
     width: 7.75rem;
@@ -12,6 +15,7 @@
       width: 100%;
       height: 100%;
       object-fit: cover;
+      object-position: top;
       border-radius: 0.25rem 0 0 0.25rem;
     }
   }
