--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -1,9 +1,10 @@
-@mixin min-max($min-width, $max-width, $padding) {
-  min-width: $min-width;
-  max-width: $max-width;
-  padding: 0 $padding;
-  box-sizing: border-box;
+@mixin container {
+  max-width: 77rem;
   margin: 0 auto;
+  padding: 0 2.5rem;
+  @include tablet {
+    padding: 0 1rem;
+  }
 }
 @mixin box-shadow($x: 0, $y: 0.25rem, $blur: 0.5rem, $color: $blackOpacity) {
   box-shadow: $x $y $blur $color;
