--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -1,13 +1,15 @@
 @import "../../../assets/styles/main.scss";
 .card {
   max-width: 23.75rem;
+  width: 100%;
   display: flex;
   background: $white;
   border-radius: 0.25rem;
-  @include custom(675px) {
-    margin: 1rem auto;
-  }
+  cursor: pointer;
   @include boxShadowCard;
+  &:hover {
+    @include boxShadowCardHover;
+  }
   .photoBlock {
     width: 7.75rem;
     height: 7.75rem;
