--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -7,8 +7,10 @@
   border-radius: 0.25rem;
   cursor: pointer;
   @include boxShadowCard;
+  transition: transform 0.5s, box-shadow 0.5s;
   &:hover {
     @include boxShadowCardHover;
+    transform: translateY(-0.125rem);
   }
   .photoBlock {
     width: 7.75rem;
