--- a/src/components/organisms/CardList/styles.module.scss
+++ b/src/components/organisms/CardList/styles.module.scss
@@ -10,6 +10,10 @@
     grid-template-columns: 1fr;
     justify-items: center;
   }
+  .cardLink {
+    max-width: 23.75rem;
+    width: 100%;
+  }
 }
 .loader {
   position: absolute;
