--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -1,6 +1,8 @@
 $white: #ffffff;
+$gray: #a9a9a9;
 $bgColor: #fbfbfb;
 $blackOpacity: rgba(0, 0, 0, 0.1);
 $mainFontColor: #2d2d2d;
 $colorFontStatus: #51e245;
 $colorBgStatus: rgba(48, 255, 30, 0.2);
+$colorError: rgb(206, 92, 92);
