--- a/src/components/molecules/Card/styles.module.scss
+++ b/src/components/molecules/Card/styles.module.scss
@@ -1,5 +1,7 @@
 @import "../../../assets/styles/main.scss";
+
 .card {
+  max-width: 23.75rem;
   width: 100%;
   display: flex;
   background: $white;
