BB-9: - made a header

--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -6,3 +6,4 @@ $mainFontColor: #2d2d2d;
 $colorFontStatus: #51e245;
 $colorBgStatus: rgba(48, 255, 30, 0.2);
 $colorError: rgb(206, 92, 92);
+$colorBgLink: #f1b926;
