--- a/src/components/pages/NotFound/styles.module.scss
+++ b/src/components/pages/NotFound/styles.module.scss
@@ -1,5 +1,6 @@
 @import "../../../assets/styles/main.scss";
 .notFound {
+  flex: 1 1 auto;
   text-align: center;
   .message {
     margin: 5rem 0 2rem;
