--- a/src/components/pages/MainPage/styles.module.scss
+++ b/src/components/pages/MainPage/styles.module.scss
@@ -3,7 +3,7 @@
   flex: 1 1 auto;
   .img {
     width: 100%;
-    height: calc(100vh - 80px - 80px);
+    height: calc(100vh - 5rem - 5rem);
     object-fit: cover;
   }
 }
