BB-12: - got and displayed a random character quote

--- a/src/components/organisms/Character/styles.module.scss
+++ b/src/components/organisms/Character/styles.module.scss
@@ -58,27 +58,14 @@
       }
     }
     .quote {
+      width: 100%;
+      position: relative;
       span {
         color: $gray;
+        span {
+          color: $mainFontColor;
+        }
       }
     }
-  }
-}
-.loader {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  width: 100px;
-  height: 100px;
-  margin-top: -50px;
-  margin-left: -50px;
-  border-radius: 50%;
-  border-top: 3px solid $colorFontStatus;
-  border-right: 3px solid transparent;
-  animation: loader 0.7s linear infinite;
-}
-@keyframes loader {
-  to {
-    transform: rotate(360deg);
   }
 }
