--- a/src/components/atoms/Loader/styles.module.scss
+++ b/src/components/atoms/Loader/styles.module.scss
@@ -5,7 +5,7 @@
   left: 50%;
   width: 100px;
   height: 100px;
-  margin-top: -50px;
+  // margin-top: -50px;
   margin-left: -50px;
   border-radius: 50%;
   border-top: 3px solid $colorFontStatus;
