--- a/src/assets/styles/vars.scss
+++ b/src/assets/styles/vars.scss
@@ -7,3 +7,4 @@ $colorFontStatus: #51e245;
 $colorBgStatus: rgba(48, 255, 30, 0.2);
 $colorError: rgb(206, 92, 92);
 $colorBgLink: #f1b926;
+$colorFocus: rgb(27 127 204 / 50%);
