--- a/src/assets/styles/mixins.scss
+++ b/src/assets/styles/mixins.scss
@@ -15,3 +15,6 @@
 @mixin boxShadowCardHover {
   box-shadow: 0.5rem 0.5rem 0.5rem $blackOpacity;
 }
+@mixin boxShadowFocus {
+  box-shadow: 0 0 0 0.125rem $colorFocus;
+}
