--- a/src/components/atoms/Loader/styles.module.scss
+++ b/src/components/atoms/Loader/styles.module.scss
@@ -3,14 +3,20 @@
   position: absolute;
   top: 50%;
   left: 50%;
-  width: 100px;
-  height: 100px;
-  // margin-top: -50px;
-  margin-left: -50px;
+  width: 6rem;
+  height: 6rem;
+  margin-top: -3rem;
+  margin-left: -3rem;
   border-radius: 50%;
-  border-top: 3px solid $colorFontStatus;
-  border-right: 3px solid transparent;
+  border-top: 0.2rem solid $colorFontStatus;
+  border-right: 0.2rem solid transparent;
   animation: loader 0.7s linear infinite;
+  &.small {
+    width: 3rem;
+    height: 3rem;
+    margin-top: -1.5rem;
+    margin-left: -1.5rem;
+  }
 }
 @keyframes loader {
   to {
