--- a/src/components/organisms/CardList/styles.module.scss
+++ b/src/components/organisms/CardList/styles.module.scss
@@ -1,13 +1,50 @@
 @import "../../../assets/styles/main.scss";
 .cardList {
-  display: grid;
-  grid-template-columns: repeat(3, 1fr);
-  gap: 1.5rem 2rem;
-  @include tabletLg {
-    grid-template-columns: repeat(2, 1fr);
-  }
-  @include custom(675px) {
-    grid-template-columns: 1fr;
-    justify-items: center;
+  min-height: 21.5625rem;
+  margin-top: 5rem;
+  .catalog {
+    .wrapper {
+      margin-bottom: 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      .title {
+        @include fontBig;
+      }
+    }
+    .heading {
+      max-width: 42.8rem;
+      margin-left: 6.5rem;
+      margin-bottom: 1.5rem;
+      display: none;
+      grid-template-columns: repeat(3, 1fr);
+      justify-items: start;
+      align-items: center;
+      @include fontSmall;
+      @include mobile {
+        margin-left: 4rem;
+      }
+    }
+    .catalogList {
+      display: grid;
+      grid-template-columns: repeat(3, 1fr);
+      gap: 1.5rem 2rem;
+      @include tabletLg {
+        grid-template-columns: repeat(2, 1fr);
+      }
+      @include custom(675px) {
+        grid-template-columns: 1fr;
+        justify-items: center;
+      }
+    }
+    &.list {
+      .heading {
+        display: grid;
+      }
+      .catalogList {
+        grid-template-columns: 1fr;
+        gap: 0;
+      }
+    }
   }
 }
