--- a/src/components/pages/CharactersPage/styles.module.scss
+++ b/src/components/pages/CharactersPage/styles.module.scss
@@ -1,9 +1,11 @@
 @import "../../../assets/styles/main.scss";
 .caharacterPage {
-  padding: 1rem 0;
+  padding: 5rem 0;
   flex: 1 1 auto;
-  .title {
-    margin-bottom: 2rem;
-    @include fontBig;
+  .wrapper {
+    position: relative;
+    margin-top: 3.5rem;
+    display: flex;
+    justify-content: space-between;
   }
 }
