--- a/src/components/molecules/ToggleShowCard/styles.module.scss
+++ b/src/components/molecules/ToggleShowCard/styles.module.scss
@@ -12,6 +12,8 @@
       margin-left: 0;
     }
     svg {
+      width: 100%;
+      height: 100%;
       stroke: $gray;
       &.active {
         stroke: $colorBgLink;
