--- a/src/components/pages/CharactersPage/styles.module.scss
+++ b/src/components/pages/CharactersPage/styles.module.scss
@@ -1,6 +1,7 @@
 @import "../../../assets/styles/main.scss";
 .caharacterPage {
-  padding: 5rem 0;
+  // padding: 5rem 0;
+  padding-bottom: 2rem;
   flex: 1 1 auto;
   .wrapper {
     position: relative;
