--- a/src/components/pages/CharactersPage/styles.module.scss
+++ b/src/components/pages/CharactersPage/styles.module.scss
@@ -1,8 +1,10 @@
 @import "../../../assets/styles/main.scss";
 .caharacterPage {
-  // padding: 5rem 0;
-  padding-bottom: 2rem;
+  padding: 5rem 0 2rem;
   flex: 1 1 auto;
+  @include mobile {
+    padding-top: 3rem;
+  }
   .wrapper {
     position: relative;
     margin-top: 3.5rem;
